--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,3 +1,10 @@
+
+
+plugins {
+    id 'com.android.application'
+  id 'com.google.gms.google-services'
+  id 'com.facebook.react'
+}
 apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
 
@@ -113,7 +120,7 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.samakibay"
+    namespace 'com.myasma01.samakibay'
     defaultConfig {
         applicationId 'com.myasma01.samakibay'
         minSdkVersion rootProject.ext.minSdkVersion
@@ -192,6 +199,7 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation platform('com.google.firebase:firebase-bom:32.0.0')
 
     def isGifEnabled = (findProperty('expo.gif.enabled') ?: "") == "true";
     def isWebpEnabled = (findProperty('expo.webp.enabled') ?: "") == "true";
@@ -235,3 +243,5 @@ dependencies {
 
 apply from: new File(["node", "--print", "require.resolve('@react-native-community/cli-platform-android/package.json')"].execute(null, rootDir).text.trim(), "../native_modules.gradle");
 applyNativeModulesAppBuildGradle(project)
+
+apply plugin: 'com.google.gms.google-services'
