--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~48.0.15",
     "expo-location": "^15.1.1",
     "expo-notifications": "^0.18.1",
+    "expo-server-sdk": "^3.7.0",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.0",
