--- a/app.json
+++ b/app.json
@@ -18,7 +18,8 @@
       "bundleIdentifier": "com.myasma01.samakibay"
     },
     "android": {
-      "googleServicesFile": "./android/google-services (4).json",
+      "googleServicesFile": "./android/google-services .json",
+
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
