--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.0",
     "geolib": "^3.3.3",
+    "istanbul-lib-coverage": "^3.2.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-maps": "^1.3.2",
