--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@sanity/client": "^6.1.0",
     "@sanity/image-url": "^1.0.2",
+    "@trycourier/courier": "^4.2.0",
     "axios": "^1.4.0",
     "eas-cli": "^3.13.0",
     "event-source-polyfill": "^1.0.31",
@@ -24,10 +25,10 @@
     "firebase": "^9.22.0",
     "geolib": "^3.3.3",
     "istanbul-lib-coverage": "^3.2.0",
+    "link": "^1.5.1",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "^0.71.8",
     "react-native-maps": "^1.3.2",
-    "react-native-onesignal": "^4.5.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-url-polyfill": "^1.3.0",
